# EMV-Tools-Windows

./: CMakeLists.txt  README.md
EMV-Tools-Windows/: EMV-Tools_Win.cpp  FILE-STRUCT.txt  Text-for-Main-file.txt  emv_cap.c  emv_cl_cda.c  emv_dda.c  emv_dump.c  emv_sda.c  missing_functions.c
EMV-Tools-Windows/Library's/libcore/: CMake.txt  config.c  config.h  config_windows.c  config_windows.h  dol.c  dol.h  emv_card.c  emv_card.h  emv_commands.c  emv_commands.h  emv_defs.c  emv_defs.h  emv_file_utils.c  emv_file_utils.h  emv_operations.c  emv_operations.h  emv_pki.c  emv_pki.h  emv_tags.c  emv_tags.h  tlv.c  tlv.h  utils_windows.c  utils_windows.h
EMV-Tools-Windows/Library's/libcrypto/: CMakeLists.txt  crypto_hash.c  crypto_hash.h  crypto_windows.c  crypto_windows.h  emv_certificate_ops.c  emv_certificate_ops.h  emv_pk.c  emv_pk.h  emv_pki_priv.c  emv_pki_priv.h
EMV-Tools-Windows/Library's/libscard/: CMakeLists.txt  apdu.h  apdu_processing.c  scard_common.h  winscard_impl.c
